# burmalda57

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/burmalda/journal/: AvatarPickerActivity.kt  EsiaAuthActivity.kt  KeystoreCrypto.kt  Notifier.kt
app/src/main/res/values/: ic_launcher_background.xml
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: android.rs  bridge.rs  cache.rs  crypto.rs  diary.rs  events.rs  finals.rs  homework.rs  lib.rs  login.rs  marks.rs  net.rs  notify.rs  profile.rs  theme.rs
rust/ui/: app.slint
